--- a/ApplicationOfOpenSWProject/Application_of_OpenSW_Project_HW02/app/src/main/res/layout/activity_main.xml
+++ b/ApplicationOfOpenSWProject/Application_of_OpenSW_Project_HW02/app/src/main/res/layout/activity_main.xml
@@ -63,7 +63,6 @@
     <ImageView
         android:id="@+id/iv_animal"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        tools:src="@drawable/dog"/>
+        android:layout_height="wrap_content" />
 
 </LinearLayout>
