--- a/ApplicationOfOpenSWProject/Application_of_OpenSW_Project_HW03/app/src/main/res/layout/activity_main.xml
+++ b/ApplicationOfOpenSWProject/Application_of_OpenSW_Project_HW03/app/src/main/res/layout/activity_main.xml
@@ -4,9 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="10dp"
     android:orientation="vertical"
+    android:padding="10dp"
     tools:context=".MainActivity">
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="2020039010 김연신" />
 
     <EditText
         android:id="@+id/et1"
@@ -24,12 +29,13 @@
         android:minHeight="48dp"
 
         />
+
     <GridLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:rowCount="2"
         android:columnCount="5"
-        >
+        android:rowCount="2">
+
         <Button
             android:id="@+id/BtnNum0"
             android:layout_width="70dp"
@@ -159,8 +165,8 @@
 
     <TextView
         android:id="@+id/tvResult"
-        android:layout_height="wrap_content"
         android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_gravity="fill_horizontal"
         android:layout_marginTop="16dp"
         android:text="계산 결과 : "
